# template-backend

./: .env  .env.example  .gitignore  Dockerfile  README.md  bootstrap  bootstrap.sh  cloudbuild.yaml  config  config.yaml  deploy  deploy.sh  get-api-url  init-git-branches.sh  pyproject.toml  setup-cloud-build-triggers.sh  setup.sh  simulate
.github/workflows/: dev_deploy.yml  prod_deploy.yml  staging_deploy.yml
app/: __init__.py  database.py  firebase_utils.py  run.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  db.py  main.py
backend/app/api/: customers.py  health.py
cloudbuilds/: cloudbuild-dev.yaml  cloudbuild-prod.yaml  cloudbuild-staging.yaml  cloudbuild.yaml
docker/: Dockerfile
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/customers/: page.tsx
frontend/src/types/: index.ts
frontend/src/utils/: env.ts
scripts/cicd/: cloudbuild.yaml  deploy.sh  setup-cloud-build-triggers-simple.sh  setup-cloud-build-triggers.sh  simulate_cicd_events.sh
scripts/setup/: bootstrap-simple.sh  bootstrap.sh  bootstrap.sh.bak  firestore_setup.sh
scripts/test/: run_tests.sh  verify_library.sh
service_accounts/: README.md
src/: app.py
terraform/: .gitignore  README.md  cloud_run.tf  firebase.tf  firestore.tf  main.tf  outputs.tf  providers.tf  service_accounts.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/: .terraform.lock.hcl  .terraform.tfstate.lock.info  main.tf  main.tf.original  terraform.tfstate.1744016070.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/cicd/: main.tf  outputs.tf  terraform.tfstate.1744016461.backup  terraform.tfstate.1744016484.backup  terraform.tfstate.backup.1744214367  terraform.tfstate.backup.1744214991  terraform.tfstate.backup.1744215319  terraform.tfstate.backup.1744215549  terraform.tfstate.backup.1744217102  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_app_exists.py  test_cicd.py  test_firestore_e2e.py  test_infrastructure.py
