[tool.poetry]
name = "template-backend"
version = "0.1.0"
description = "Template Backend API"
authors = ["FDDI <fddiferd@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.103.1"
uvicorn = ">=0.23.2"
firebase-admin = ">=6.2.0"
google-cloud-firestore = ">=2.11.1"
pydantic = ">=2.3.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"