[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Backend API for wedge-cicd-test"
authors = [
    {name = "Wedge Developer", email = "dev@example.com"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "firebase-admin==6.2.0",
    "python-multipart==0.0.6",
    "psutil==5.9.6",
    "pydantic==2.4.2",
    "requests==2.31.0",
    "pyyaml==6.0.1",
]

[tool.setuptools]
packages = ["app"] 